now show recorded unfancy notes on video (not interactive)

--- a/xgds_video/templates/xgds_video/VideoJS.html
+++ b/xgds_video/templates/xgds_video/VideoJS.html
@@ -3,6 +3,10 @@
      <script type="text/javascript" src="{{ EXTERNAL_URL }}packery/dist/packery.pkgd.min.js" ></script>
     <script type="text/javascript" src="{{ EXTERNAL_URL }}moment/moment.js"></script>
     <script type="text/javascript" src="{{ EXTERNAL_URL }}moment-timezone/moment-timezone.js"></script>
+    <script type="text/javascript" src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
+    <script type="text/javascript" src="{{ EXTERNAL_URL }}klass/klass.min.js"></script>
+	<script type="text/javascript" src="{{ EXTERNAL_URL }}datatables/media/js/jquery.dataTables.min.js"></script>
+    
     <script type="text/javascript" src="{{ EXTERNAL_URL }}jwplayer/jwplayer.js"></script>
     <script type="text/javascript">
         jwplayer.key="{{ JWPLAYER_KEY }}";
