--- a/xgds_video/templates/xgds_video/video_active_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_active_playbacks.html
@@ -1,12 +1,8 @@
 {% extends "xgds_video/video_recorded_playbacks.html" %}
 {% load url from future %}
- 
- {% block scripts %}
-	{{block.super}}
+
+{% block myscripts %} 
 	{% if SSE %}
-	<script type="text/javascript" src="{{ EXTERNAL_URL }}underscore/underscore-min.js"></script>
-    <script type="text/javascript" src="{{ EXTERNAL_URL }}klass/klass.min.js"></script>
-	<script type="text/javascript" src="{{ EXTERNAL_URL }}datatables/media/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src='{{STATIC_URL}}xgds_notes/js/liveNotesTable.js'></script>
 	{% endif %}
 	<script type="text/javascript">
@@ -14,7 +10,7 @@
         var hasMasterSlider = false;
         var isLive = true;
     </script>
-{% endblock %}
+{% endblock myscripts %}
 
 
     {% block topStuff %}
@@ -54,7 +50,6 @@
         {% block otherPackery %}
         {% if SSE %}
         {% if segmentsJson %}
-        <!--  heretamar -->
        	<div class="item {% if sources|length > 1 %}w2{% endif %} freeAspect" id="notesDiv" style="background-color:#F9FADE;">
        	<div id="messageDiv">
 		</div>
@@ -65,15 +60,14 @@
        	{% endif %}
         {% endblock otherPackery %}
 
-{% block notesSetup %}
-{{ block.super }}
+{% block myNotesSetup %}
 {% if SSE %}
 {% if sources|length = 1 %}
 {% with filter="flight__name"|add:":"|add:episode.shortName|add:"_"|add:sources.0.shortName%}
 var thefilter = '{{filter}}';
 var liveNotesController = new liveNotes.LiveNotesController({
-           liveNotesStateURL: " {% url 'xgds_notes_liveNotes' %}" +  thefilter, // 'flight__group__episode__shortName' episode.shortName
-           liveNotesStreamURL: "{% url 'xgds_notes_liveNotes_stream'  %}" +  thefilter,
+           liveNotesURL: " {% url 'xgds_notes_liveNotes' %}" +  thefilter,
+           liveNotesStreamURL: "{% url 'xgds_notes_liveNotes_stream'  %}" +  thefilter
        });
 {% endwith %}
 {% else %}
@@ -81,12 +75,12 @@ var liveNotesController = new liveNotes.LiveNotesController({
 var thefilter = '{{filter}}';
 var liveNotesController = new liveNotes.LiveNotesController({
            liveNotesStreamURL: "{% url 'xgds_notes_liveNotes_stream' %}"  + thefilter,
-           liveNotesStateURL: " {% url 'xgds_notes_liveNotes'  %}"  + thefilter, // 'flight__group__episode__shortName' episode.shortName 
+           liveNotesURL: " {% url 'xgds_notes_liveNotes'  %}"  + thefilter
        });
  {% endwith %}
 {% endif %}
 {% endif %}
-{% endblock notesSetup %}
+{% endblock myNotesSetup %}
 
 	{% block hookControls %}
 	{% if segmentsJson %}
