remove ac_quicktime -- live feeds page will not work now

--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -2,7 +2,9 @@
 {% block headExtras %}
 {{block.super}}
 <script src="{{ EXTERNAL_URL }}jquery/dist/jquery.min.js" type="text/javascript"></script>
- <script src="{{ EXTERNAL_URL }}AC_QuickTime/index.js" language="javascript" type="text/javascript"></script>
+<!--  TODO QUICKTIME NO LONGER WORKS -->
+ <!--   script src="{{ EXTERNAL_URL }}AC_QuickTime/index.js" language="javascript" type="text/javascript"></script -->
+ <!-- END TODO -->
  <script src="{{ EXTERNAL_URL }}masonry/dist/masonry.pkgd.min.js" type="text/javascript"></script>
  <script language="javascript" type="text/javascript" src="{{ EXTERNAL_URL }}jquery-ui/jquery-ui.min.js"></script>
  <script src="{{ EXTERNAL_URL }}jquery-tagsinput/src/jquery.tagsinput.js" type="text/javascript" ></script>
