--- a/xgds_video/templates/xgds_video/LiveImageStream.html
+++ b/xgds_video/templates/xgds_video/LiveImageStream.html
@@ -11,7 +11,7 @@
   	<script src="{{ STATIC_URL }}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
   	<script type="text/javascript">
     	var STATIC_URL = '{{STATIC_URL}}';
-        var submitNoteUrl = '{% url record_simple %}';
+        var submitNoteUrl = "{% url 'record_simple' %}";
     </script>
  	<script src="{{STATIC_URL}}xgds_video/js/liveImageStream.js" type="text/javascript"></script>
  	{% if INCLUDE_NOTE_INPUT %}
