--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -251,6 +251,7 @@ div.ui-slider-range.ui-widget-header {
 	float:left; 
 	height:15px;
 	padding-bottom:2px;
+	color: red;
 }
 
 blocky div label input{
