--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -60,7 +60,7 @@
 	    	<table>
 	    		{% if episode %}
 		   			<tr>
-		   				<td> <b> Episode ({{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}) Name: </b> </td>
+		   				<td> <b> {{ settings.XGDS_PLANNER2_FLIGHT_MONIKER }}: </b> </td>
 		   				<td> {{ episode.shortName }} </td>
 		   			</tr>
 	   			{% endif %}
