work in progress taking notes on video this had been mostly working but refactor xgds_notes js broke some stuff

--- a/xgds_video/templates/xgds_video/video_active_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_active_playbacks.html
@@ -90,6 +90,6 @@ var liveNotesController = new liveNotes.LiveNotesController({
             mute: true
             };
     setupJWplayer({"mute":true}, hasMasterSlider, false, "100%");
-    setupNotesUI();
+    xgds_notes.setupNotesUI();
     {% endif %}
     {% endblock hookControls %}
