--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -1,23 +1,24 @@
 {% with form=data %}
 {% if user.is_authenticated %}
-<div class="notediv" >
+<button id="add_note_button" class="mybutton toprow-right small float_button">Add Note</button>
+<div class="notediv" id="notes_input" hidden>
 	<form id="create_note{{ form.index }}" class="create_note_form" action="" method="POST">
-		<input type="hidden" id="id_index" value="{{ form.index }}" >
-       	<input type="hidden" id="id_event_time" value="{{ form.event_time.value }}" >
-       	<input type="hidden" id="source" value="{{ source }}" >
-		<div id="error_div{{ form.index }}" class="noteerrordiv">
-			<img src="{{STATIC_URL}}xgds_video/images/ipx.gif" id="error_image{{ form.index }}" width="12" alt="error image {{form.index}}"></img>
-			<span id="error_content{{ form.index }}" ></span>
+		<input type="hidden" id="id_event_time" >
+		<input type="hidden" id="id_event_timezone" >
+		<input type="hidden" id="id_app_label" value="{{form.app_label.value}}" >
+		<input type="hidden" id="id_model_type" value="{{form.model_type.value}}" >
+		<input type="hidden" id="id_object_id" value="{{form.object_id.value}}" >
+		<input type="hidden" id="source" value="{{ source }}" >
+		<input type="hidden" id="id_position_id" >
+		{{ form.extras }}
+		<div id="error_div" class="noteerrordiv">
+			<span id="error_icon{{ form.index }}">&nbsp;</span>
+			<span id="error_content{{ form.index }}"></span>
 		</div>
-		<div class="notecontainer" > 
-				<label for="id_content{{form.index}}" class="notelabel ">Note:</label>
-				<textarea class="noteinput "  id="id_content{{form.index}}" type="text" name="content" maxlength="500" style="height:50px;width:65%;margin-right:5px;"></textarea>
-			<div class="noteitem" > 
-	        	<label for="id_tags{{form.index}}" class=" notelabel">Tags:</label>
-	        	<input id="id_tags{{ form.index }}" type="text" class="tags" />
-	        	{{ form.extras }}
-	        	<input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit small">
-	        </div>
+		<div class="notecontainer" >
+			<textarea class="noteinput"  id="id_content{{form.index}}" type="text" name="content" maxlength="500" style="height:50px;" placeholder="Enter notes here"></textarea>
+	        <input class="taginput"  id="id_tags{{form.index}}" placeholder="Choose tags" type="text" />
+	        <input id="save_note{{form.index}}" type="submit" value="Save" class="mybutton noteSubmit small">
         </div>
   </form>
 </div>
