tuned notes so they are always called notes_list and update better from video pages

--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -128,7 +128,7 @@
         <div class="item {% if sources|length > 1 %}w2{% endif %} freeAspect" id="notesDiv" style="background-color:#F9FADE;">
         <div id="messageDiv">
                 </div>
-                <table id="notesTable" class="display">
+                <table id="notes_list" class="display">
                 </table>
         </div>
         {% endblock otherPackery %}
